src/snapshots/cub__cli__tests__usage_completions.snap
---
source: src/cli.rs
expression: err
---
Generate tab-completions for your shell.

Installation for Bash:

$ cub completions bash > ~/.local/share/bash-completion/completions/cub

Installation for ZSH (depending on `$fpath`):

$ cub completions zsh > ~/.zfunc/_cub

You may need to restart your shell or configure it.

This installation works similarly as for rustup's completions. For detailed instructions, see:

$ rustup help completions

Usage: cub completions <SHELL>

Arguments:
  <SHELL>
          [possible values: bash, elvish, fish, powershell, zsh]

Options:
  -h, --help
          Print help (see a summary with '-h')

