src/snapshots/cub__cli__tests__usage_cub.snap
---
source: src/cli.rs
expression: err
---
cubicle 
Manage sandboxed development environments

USAGE:
    cub [OPTIONS] <SUBCOMMAND>

OPTIONS:
    -c, --config <CONFIG>    Path to configuration file [default: $HOME/.config/cubicle.toml]
    -h, --help               Print help information. Use --help for more details

SUBCOMMANDS:
    completions    Generate tab-completions for your shell
    enter          Run a shell in an existing environment
    exec           Run a command in an existing environment
    help           Print this message or the help of the given subcommand(s)
    list           Show existing environments
    new            Create a new environment
    package        View and manage packages
    purge          Delete environment(s) and their work directories
    reset          Recreate an environment (keeping only its work directory)
    tmp            Create and enter a new temporary environment

