src/snapshots/cub__cli__tests__usage_list.snap
---
source: src/cli.rs
expression: err
---
cub-list 
Show existing environments

USAGE:
    cub list [OPTIONS]

OPTIONS:
        --format <FORMAT>    Set output format [default: default] [possible values: default, json,
                             names]
    -h, --help               Print help information. Use --help for more details

