src/snapshots/cub__cli__tests__usage_package list.snap
---
source: src/cli.rs
expression: err
---
Show available packages

Usage: cub package list [OPTIONS]

Options:
      --format <FORMAT>
          Set output format
          
          [default: default]

          Possible values:
          - default: Human-formatted table
          - json:    Detailed JSON output for machine consumption
          - names:   Newline-delimited list of package names only

  -h, --help
          Print help information (use `-h` for a summary)

