src/snapshots/cub__cli__tests__usage_purge.snap
---
source: src/cli.rs
expression: err
---
Delete environment(s) and their work directories

Usage: cub purge <NAMES>...

Arguments:
  <NAMES>...
          Environment name(s).
          
          Wildcards are allowed: `?` matches a single character and `*` matches zero or more
          characters.

Options:
  -h, --help
          Print help (see a summary with '-h')

