src/snapshots/cub__cli__tests__usage_tmp.snap
---
source: src/cli.rs
expression: err
---
Create and enter a new temporary environment

Usage: cub tmp [OPTIONS]

Options:
      --packages <PACKAGES>
          Comma-separated names of packages to inject into home directory.
          
          If omitted, uses the "default" package.
          
          Wildcards are allowed: `?` matches a single character and `*` matches zero or more
          characters.

  -h, --help
          Print help (see a summary with '-h')

